todo-006-20260502.md 작업 수행